add media model and trait

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
     ],
     "require": {
         "php": "^8.0",
-        "laravel/framework": "^7.0|^8.0|^9.0"
+        "ext-imagick": "*",
+        "laravel/framework": "^7.0|^8.0|^9.0",
+        "mvanduijker/laravel-model-exists-rule": "^3.0",
+        "spatie/laravel-medialibrary": "^10.0.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16"
