--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,6 @@
         "mvanduijker/laravel-model-exists-rule": "^3.0",
         "spatie/laravel-medialibrary": "^10.0.0"
     },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16"
-    },
     "scripts": {
         "psalm": "vendor/bin/psalm",
         "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
@@ -48,5 +45,8 @@
                 "Dcodegroup\\LaravelAttachments\\LaravelAttachmentsServiceProvider"
             ]
         }
+    },
+    "require-dev": {
+        "laravel/pint": "^1.6"
     }
 }
