--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "require": {
         "php": "^8.0",
         "ext-imagick": "*",
-        "laravel/framework": "^7.0|^8.0|^9.0",
+        "laravel/framework": "^7.0|^8.0|^9.0|^10.0",
         "mvanduijker/laravel-model-exists-rule": "^3.0",
         "spatie/laravel-medialibrary": "^10.0.0"
     },
