--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,28 +4,28 @@ on: [push]
 
 jobs:
   php-cs-fixer:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Cache Pint
+        uses: actions/cache@v3
+        with:
+          path: ./storage/pint.cache
+          key: ${{ runner.os }}-pint-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-pint-
+
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
-
-      - name: Cache composer dependencies
-        uses: actions/cache@v3
-        with:
-          path: vendor
-          key: composer-${{ hashFiles('composer.lock') }}
-
-      - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress
+          tools: pint
 
       - name: Run Laravel Pint (PHP CS Fixer)
-        run: ./vendor/bin/pint
+        run: pint
+        continue-on-error: true
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
