--- a/composer.json
+++ b/composer.json
@@ -20,21 +20,26 @@
             "email": "robert@dcodegroup.com"
         },
         {
+            "name": "Nathan Rzepecki",
+            "email": "nathan@lionslair.net.au",
+            "homepage": "https://www.lionslair.net.au"
+        },
+        {
             "name": "Dcode Group",
             "email": "forge@dcodegroup.com",
             "homepage": "https://dcodegroup.com"
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.2|^8.3",
         "ext-imagick": "*",
-        "laravel/framework": "^7.0|^8.0|^9.0|^10.0",
+        "laravel/framework": "^9.0|^10.0|^11.0",
         "mvanduijker/laravel-model-exists-rule": "^3.0",
-        "spatie/laravel-medialibrary": "^10.0.0"
+        "spatie/laravel-medialibrary": "^10.0.0",
+        "spatie/pdf-to-image": "^2.2"
     },
     "scripts": {
-        "psalm": "vendor/bin/psalm",
-        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
+        "psalm": "vendor/bin/psalm"
     },
     "config": {
         "sort-packages": true
@@ -47,6 +52,6 @@
         }
     },
     "require-dev": {
-        "laravel/pint": "^1.6"
+        "laravel/pint": "^1.13"
     }
 }
