--- a/package.json
+++ b/package.json
@@ -1,4 +1,28 @@
 {
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx,vue,ts,tsx,json,scss",
+    "lint:fix": "eslint . --ext js,jsx,vue,ts,tsx,json,scss --fix"
+  },
+  "name": "laravel-attachments",
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.23.0",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-plugin-flow": "^2.29.1",
+    "eslint-plugin-html": "^8.0.0",
+    "eslint-plugin-jsx": "^0.1.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier-vue": "^5.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.22.0"
+  },
   "dependencies": {
     "@heroicons/vue": "^2.1.1",
     "bytes": "^3.1.2",
