--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,13 @@
 name: CI
 
 on:
+  workflow_call:
+  workflow_dispatch:
   push:
-    branches:
-      - master
 
 jobs:
   php-cs-fixer:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -37,7 +37,7 @@ jobs:
 
   phpstan:
     name: phpstan
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     strategy:
       fail-fast: true
@@ -69,7 +69,7 @@ jobs:
         run: ./vendor/bin/phpstan --error-format=github
 
   eslint:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
