--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,5 +1,6 @@
 includes:
     - ./vendor/larastan/larastan/extension.neon
+    - phpstan-baseline.neon
 
 parameters:
     level: 5
@@ -18,3 +19,5 @@ parameters:
         - '#Call to an undefined method Illuminate\\Database\\Eloquent\\Builder::allowedFilters#'
         - '#Call to an undefined method Illuminate\\Database\\Eloquent\\Model::getActivityLogUserName#'
         - '#Class App\\Models\\User not found#'
+        - '#Method Dcodegroup\\LaravelAttachments\\Models\\Media::getImageUrl\(\) is unused#'
+        - '#Access to an undefined property Dcodegroup\\LaravelAttachments\\Models\\Media::\$parent_id#'
