--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "require": {
         "php": "^8.2||^8.3",
         "ext-imagick": "*",
+        "dreamonkey/laravel-cloudfront-url-signer": "^3.4",
         "laravel/framework": "^9.0 || ^10.0 || ^11.0",
         "mvanduijker/laravel-model-exists-rule": "^3.0",
         "spatie/laravel-medialibrary": "^11.0",
