--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "require": {
         "php": "^8.2 || ^8.3",
         "ext-imagick": "*",
-        "dcodegroup/laravel-cloudfront-url-signer": "dev-master",
+        "dcodegroup/laravel-cloudfront-url-signer": "^3.6",
         "laravel/framework": "^11.0",
         "mvanduijker/laravel-model-exists-rule": "^3.0",
         "spatie/laravel-medialibrary": "^11.0",
